[gd_scene load_steps=32 format=3 uid="uid://yf4lyxv7hqex"]

[ext_resource type="Script" path="res://Player/PlayerScript.gd" id="1_j07a2"]
[ext_resource type="Texture2D" uid="uid://c3r5xcwiujogq" path="res://Art/Player/legs.png" id="2_1c6lm"]
[ext_resource type="Texture2D" uid="uid://b4st8x321iv8o" path="res://Art/Player/torso.png" id="3_rbs5e"]
[ext_resource type="Texture2D" uid="uid://c3knb4a5r7l6g" path="res://Art/Player/head.png" id="4_nql03"]
[ext_resource type="Texture2D" uid="uid://5o8rsvue5vvh" path="res://Art/Player/flashlight.png" id="5_8hggp"]
[ext_resource type="Texture2D" uid="uid://b40jdba7bv2gp" path="res://Art/Player/flashlight_run.png" id="5_pdd4u"]
[ext_resource type="Texture2D" uid="uid://mrl7w62kiua6" path="res://Art/Player/arms_run.png" id="6_vhtua"]
[ext_resource type="AudioStream" uid="uid://675oy7iuov8y" path="res://Art/Sounds/flashlight_off.wav" id="7_o8r0d"]
[ext_resource type="AudioStream" uid="uid://dxnrvf8gh04sa" path="res://Art/Sounds/flashlight_on.wav" id="8_5mmy4"]
[ext_resource type="Texture2D" uid="uid://cxe1xdahj4sh7" path="res://Art/Player/arms_run_flashlight.png" id="8_ve1et"]
[ext_resource type="PackedScene" uid="uid://bq2x0ivjdur2s" path="res://Misc/state_machine.tscn" id="9_4n53k"]
[ext_resource type="Script" path="res://Player/PlayerState.gd" id="10_2edtd"]
[ext_resource type="Script" path="res://Player/PlayerIdleState.gd" id="11_vi3vr"]
[ext_resource type="Script" path="res://Player/PlayerRunState.gd" id="12_jfbfc"]
[ext_resource type="Script" path="res://Player/PlayerWalkState.gd" id="13_32bm8"]
[ext_resource type="Texture2D" uid="uid://nvjsekynvlax" path="res://Art/Misc/lungs.png" id="14_7bvxq"]
[ext_resource type="Texture2D" uid="uid://cs5hm56w5ov07" path="res://Art/Player/flashlight_texture_huge.png" id="15_2so51"]
[ext_resource type="Script" path="res://Player/PlayerHideState.gd" id="16_47hw2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_74y8y"]
radius = 108.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vcuq8"]
radius = 15.0

[sub_resource type="Animation" id="Animation_vroed"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../UpperBody/FlashLight:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../UpperBody/FlashLight/FlashLight:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../UpperBody/Arms:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_ve1et")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../UpperBody/Arms:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../UpperBody/FlashLight:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../UpperBody/FlashLight:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_pdd4u")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../UpperBody/FlashLight/FlashLight:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7.5, -25)]
}

[sub_resource type="Animation" id="Animation_rp0ot"]
resource_name = "flashlight_end"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../UpperBody/FlashLight:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../UpperBody/FlashLight/FlashLight:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_flashlight_mode"
}]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../FlashLightOff")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_o8r0d")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../UpperBody/FlashLight:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_8hggp")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../UpperBody/FlashLight:hframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_31k4a"]
resource_name = "flashlight_run"
length = 2.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../UpperBody/Arms:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_ve1et")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../UpperBody/Arms:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../UpperBody/FlashLight:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_pdd4u")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../UpperBody/FlashLight:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../UpperBody/FlashLight:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../UpperBody/FlashLight/FlashLight:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5, 1.2, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(7.5, -25), Vector2(7.5, -22), Vector2(7.5, -20), Vector2(7.5, -22), Vector2(7.5, -25)]
}

[sub_resource type="Animation" id="Animation_ousra"]
resource_name = "flashlight_start"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../UpperBody/FlashLight:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [5, 4, 3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../UpperBody/FlashLight/FlashLight:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_flashlight_mode"
}]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../FlashLightOn")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_5mmy4")
}],
"times": PackedFloat32Array(0.3)
}
tracks/3/use_blend = true
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../UpperBody/FlashLight:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_8hggp")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../UpperBody/FlashLight:hframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uv8jl"]
_data = {
"RESET": SubResource("Animation_vroed"),
"flashlight_end": SubResource("Animation_rp0ot"),
"flashlight_run": SubResource("Animation_31k4a"),
"flashlight_start": SubResource("Animation_ousra")
}

[sub_resource type="Animation" id="Animation_mlv5l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LowerBody/Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UpperBody/FlashLight:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UpperBody/FlashLight/FlashLight:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UpperBody/Arms:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("UpperBody/Arms:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_vhtua")]
}

[sub_resource type="Animation" id="Animation_obip2"]
resource_name = "run"
length = 2.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LowerBody/Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UpperBody/Arms:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UpperBody/Arms:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_vhtua")]
}

[sub_resource type="Animation" id="Animation_61e43"]
resource_name = "walk"
length = 2.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LowerBody/Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lbsxs"]
_data = {
"RESET": SubResource("Animation_mlv5l"),
"run": SubResource("Animation_obip2"),
"walk": SubResource("Animation_61e43")
}

[sub_resource type="Gradient" id="Gradient_uak13"]
offsets = PackedFloat32Array(0, 0.480519)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yrtbc"]
gradient = SubResource("Gradient_uak13")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_j07a2")

[node name="PlayerSoundArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 0

[node name="PlayerSoundCollision" type="CollisionShape2D" parent="PlayerSoundArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_74y8y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vcuq8")

[node name="LowerBody" type="Node2D" parent="."]

[node name="Legs" type="Sprite2D" parent="LowerBody"]
texture = ExtResource("2_1c6lm")
hframes = 23

[node name="UpperBody" type="Node2D" parent="."]

[node name="Torso" type="Sprite2D" parent="UpperBody"]
texture = ExtResource("3_rbs5e")

[node name="Head" type="Sprite2D" parent="UpperBody"]
texture = ExtResource("4_nql03")

[node name="FlashLight" type="Sprite2D" parent="UpperBody"]
texture = ExtResource("5_pdd4u")
hframes = 23

[node name="FlashLight" type="PointLight2D" parent="UpperBody/FlashLight"]
position = Vector2(7.5, -25)
energy = 0.6
shadow_enabled = true
texture = ExtResource("15_2so51")
offset = Vector2(0, -200)

[node name="Arms" type="Sprite2D" parent="UpperBody"]
texture = ExtResource("6_vhtua")
hframes = 23

[node name="FlashlightAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
libraries = {
"": SubResource("AnimationLibrary_uv8jl")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lbsxs")
}

[node name="StateMachine" parent="." node_paths=PackedStringArray("current_state") instance=ExtResource("9_4n53k")]
current_state = NodePath("PlayerIdle")

[node name="StaminaRestoreTimer" type="Timer" parent="StateMachine"]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="PlayerState" type="Node" parent="StateMachine"]
script = ExtResource("10_2edtd")

[node name="FocusTimer" type="Timer" parent="StateMachine/PlayerState"]
unique_name_in_owner = true
one_shot = true

[node name="PlayerIdle" type="Node" parent="StateMachine"]
script = ExtResource("11_vi3vr")

[node name="PlayerRun" type="Node" parent="StateMachine"]
script = ExtResource("12_jfbfc")

[node name="PlayerWalk" type="Node" parent="StateMachine"]
script = ExtResource("13_32bm8")

[node name="PlayerHide" type="Node" parent="StateMachine"]
script = ExtResource("16_47hw2")

[node name="HideTimer" type="Timer" parent="StateMachine/PlayerHide"]
wait_time = 0.8
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_left = -0.5
anchor_top = -0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="StaminaBar" type="TextureProgressBar" parent="CanvasLayer/UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
max_value = 240.0
value = 240.0
fill_mode = 3
texture_progress = ExtResource("14_7bvxq")

[node name="PlayerLight" type="PointLight2D" parent="."]
energy = 0.5
texture = SubResource("GradientTexture2D_yrtbc")
texture_scale = 2.0

[node name="FlashLightOff" type="AudioStreamPlayer" parent="."]

[node name="FlashLightOn" type="AudioStreamPlayer" parent="."]

[connection signal="state_change" from="." to="StateMachine" method="on_state_change"]
[connection signal="timeout" from="StateMachine/StaminaRestoreTimer" to="." method="_on_stamina_restore_timer_timeout"]
[connection signal="state_change" from="StateMachine/PlayerState" to="StateMachine" method="on_state_change"]
[connection signal="timeout" from="StateMachine/PlayerState/FocusTimer" to="." method="_on_focus_timer_timeout"]
[connection signal="state_change" from="StateMachine/PlayerHide" to="StateMachine" method="on_state_change"]
[connection signal="timeout" from="StateMachine/PlayerHide/HideTimer" to="." method="_on_hide_timer_timeout"]
